# Energy-Languages

./: .dockerignore  .gitignore  Dockerfile  README.md  SYSTEM_OVERVIEW.md  perfarena.mk  pyproject.toml
C++/binary-trees/: Makefile  Makefile.orig  perfarena_generated.cpp
C++/chameneos-redux/: Makefile
C++/fannkuch-redux/: Makefile
C++/fasta/: Makefile
C++/k-nucleotide/: Makefile
C++/mandelbrot/: Makefile
C++/n-body/: Makefile
C++/pidigits/: Makefile
C++/regex-redux/: Makefile
C++/reverse-complement/: Makefile
C++/spectral-norm/: Makefile
CSharp/binary-trees/: Makefile
CSharp/chameneos-redux/: Makefile
CSharp/fannkuch-redux/: Makefile
CSharp/fasta/: Makefile
CSharp/k-nucleotide/: Makefile
CSharp/mandelbrot/: Makefile
CSharp/n-body/: Makefile
CSharp/pidigits/: Makefile
CSharp/regex-redux/: Makefile
CSharp/reverse-complement/: Makefile
CSharp/spectral-norm/: Makefile
CSharp/thread-ring/: Makefile
Go/binary-trees/: Makefile  Makefile.orig
Go/fannkuch-redux/: Makefile
Go/fasta/: Makefile
Go/k-nucleotide/: Makefile
Go/mandelbrot/: Makefile
Go/n-body/: Makefile
Go/pidigits/: Makefile
Python/: Python.jsonl
RAPL/: Makefile  perfarena_runner.c
docs/: LOCAL_DEMO.md
leetcode-energy/: DEMO.md  HANDOFF.md  README.md
perfarena/: DESIGN_REVIEW.md  GUIDE.md  PIPELINE.md  PROFILING_AUDIT.md  README.md  __init__.py  casewise_energy.py  classification.py  cli.py  config.py  harness.py  leetcode_energy.py  measurement.py  perturb.py  provenance.py  static_analysis.py  stats.py
scripts/: analyze_campaign.py  run_campaign.sh
(+2335 files in other folders)
